# In-NetRoadmap

./: .gitignore  README.md  config.toml  pyproject.toml
src/inetrm/: cli.py  core.py
src/inetrm/conversion/: convert.py  generate_p4.py  generate_tables.py  renderer.py
src/inetrm/conversion/decision_tree/: __init__.py  decision_tree.p4.j2  decision_tree.py  generate_p4.py  generate_tables.py  read_tree.py
src/inetrm/conversion/naive_bayes/: __init__.py  generate_p4.py  generate_table.py  naive_bayes.py  read_model.py
src/inetrm/conversion/random_forest/: __init__.py  generate_p4.py  generate_table.py  random_forest.p4.j2  random_forest.py  read_model.py
src/inetrm/module_a/: a_logic.py  catalog.py
src/inetrm/module_a/jupyter/: config.toml  train_DT.ipynb
src/inetrm/module_b/: generate_p4.py  generate_tables.py  read_tree.py
src/inetrm/module_c/: Vagrantfile  copy_template.py  render_template.py  switch-1-ml.yml  switch-1-ml.yml.j2
src/inetrm/provisioning/: ansible.cfg  copy_template.py  host-2.yml  inventory.ini  switch-1-ml.yml  table_ipv4.txt
src/inetrm/training/: a_logic.py  catalog.py
src/inetrm/training/jupyter/: train_DT.ipynb  train_NB.ipynb  train_RF.ipynb
